--- a/index.html
+++ b/index.html
@@ -10,11 +10,30 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Navegador não é compatível com isso.
+            </iframe>
         </section>
 
         <section id="redes-sociais">
-
+            <a href="#" target="tela">
+                <img src="assets/imagens/logo-home.jpg" alt="home">
+            </a> <br>
+            <a href="#">
+                <img src="assets/imagens/logo-youtube.jpg" alt="youtube">
+            </a> <br>
+            <a href="#">
+                <img src="assets/imagens/logo-github.jpg" alt="github">
+            </a> <br>
+            <a href="#">
+                <img src="assets/imagens/logo-instagram.jpg" alt="instagram">
+            </a> <br>
+            <a href="#">
+                <img src="assets/imagens/logo-twitter.jpg" alt="twitter(X)">
+            </a> <br>
+            <a href="#">
+                <img src="assets/imagens/logo-facebook.jpg" alt="facebook">
+            </a> <br>
         </section>
     </main>
 </body>
