--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
         </section>
 
         <section id="redes-sociais">
-            <a href="#" target="tela">
+            <a href="home.html" target="tela">
                 <img src="assets/imagens/logo-home.jpg" alt="home">
             </a> <br>
-            <a href="#">
+            <a href="youtube.html" target="tela">
                 <img src="assets/imagens/logo-youtube.jpg" alt="youtube">
             </a> <br>
-            <a href="#">
+            <a href="github.html" target="tela">
                 <img src="assets/imagens/logo-github.jpg" alt="github">
             </a> <br>
-            <a href="#">
+            <a href="instagram.html" target="tela">
                 <img src="assets/imagens/logo-instagram.jpg" alt="instagram">
             </a> <br>
-            <a href="#">
+            <a href="twitter.html" target="tela">
                 <img src="assets/imagens/logo-twitter.jpg" alt="twitter(X)">
             </a> <br>
-            <a href="#">
+            <a href="facebook.html" target="tela">
                 <img src="assets/imagens/logo-facebook.jpg" alt="facebook">
             </a> <br>
         </section>
