--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+            <iframe src="archives/home.html" name="tela" id="tela" frameborder="0">
                 Navegador não é compatível com isso.
             </iframe>
         </section>
 
         <section id="redes-sociais">
-            <a href="home.html" target="tela">
+            <a href="archives/home.html" target="tela">
                 <img src="assets/imagens/logo-home.jpg" alt="home">
             </a> <br>
-            <a href="youtube.html" target="tela">
+            <a href="archives/youtube.html" target="tela">
                 <img src="assets/imagens/logo-youtube.jpg" alt="youtube">
             </a> <br>
-            <a href="github.html" target="tela">
+            <a href="archives/github.html" target="tela">
                 <img src="assets/imagens/logo-github.jpg" alt="github">
             </a> <br>
-            <a href="instagram.html" target="tela">
+            <a href="archives/instagram.html" target="tela">
                 <img src="assets/imagens/logo-instagram.jpg" alt="instagram">
             </a> <br>
-            <a href="twitter.html" target="tela">
+            <a href="archives/twitter.html" target="tela">
                 <img src="assets/imagens/logo-twitter.jpg" alt="twitter(X)">
             </a> <br>
-            <a href="facebook.html" target="tela">
+            <a href="archives/facebook.html" target="tela">
                 <img src="assets/imagens/logo-facebook.jpg" alt="facebook">
             </a> <br>
         </section>
